--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin>
     <id>com.blackfireweb.stryker</id>
     <name>Stryker</name>
-    <version>1.0.10</version>
+    <version>1.0.11</version>
     <vendor email="blackfireweb@gmail.com" url="https://github.com/Garethp">Garethp</vendor>
 
     <depends>com.intellij.modules.lang</depends>
@@ -36,9 +36,9 @@
 
     <change-notes><![CDATA[
         <p>
-        <b>1.0.10</b>
+        <b>1.0.11</b>
         <ul>
-        <li>Fix a regression where inspections weren't appearing</li>
+        <li>Fix an error about reading the package.json file in the wrong context</li>
         </ul>
         </p>
     ]]>
