Provide better config for the shellCommandHandler and fix some small issues in the plugin description

--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,7 @@ intellij {
     type = 'IU'
     
     version = '2021.1'
-    plugins = ['JavaScriptLanguage', 'NodeJS']
+    plugins = ['JavaScriptLanguage', 'NodeJS', 'terminal']
 
     downloadSources true
     updateSinceUntilBuild = false
