--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin>
     <id>com.blackfireweb.stryker</id>
     <name>Stryker</name>
-    <version>2021.1.1</version>
+    <version>2021.1.2</version>
     <vendor email="blackfireweb@gmail.com" url="https://github.com/Garethp">Garethp</vendor>
     <product-descriptor code="PSTRKER" release-date="20210819" release-version="20211" optional="true"/>
 
@@ -38,11 +38,9 @@
 
     <change-notes><![CDATA[
         <p>
-        <b>2021.1</b>
+        <b>2021.1.2</b>
         <ul>
-        <li>Introduced re-running failed mutants</li>
-        <li>Fix some errors that were occurring in the background</li>
-        <li>Moved to new versioning strategy to accommodate Jetbrains Marketplace</li>
+        <li>Support Stryker version 5</li>
         </ul>
         </p>
     ]]>
