--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin>
     <id>com.blackfireweb.stryker</id>
     <name>Stryker</name>
-    <version>2021.1.2</version>
+    <version>2021.1.3</version>
     <vendor email="blackfireweb@gmail.com" url="https://github.com/Garethp">Garethp</vendor>
     <product-descriptor code="PSTRKER" release-date="20210819" release-version="20211" optional="true"/>
 
@@ -38,9 +38,9 @@
 
     <change-notes><![CDATA[
         <p>
-        <b>2021.1.2</b>
+        <b>2021.1.3</b>
         <ul>
-        <li>Support Stryker version 5</li>
+        <li>Patching in backwards compatibility support for Webstorm 2019.3 - 2020.2. The next major version of this plugin will drop support for any versions of Webstorm older than 2020.3</li>
         </ul>
         </p>
     ]]>
