Remove backwards compatibility for any webstorm versions prior to 2021

--- a/build.gradle
+++ b/build.gradle
@@ -60,7 +60,7 @@ runIde {
      */
     def HOME = System.properties['user.home']
     def installationsFound = []
-    Integer maxDesiredVersion = 193
+    Integer maxDesiredVersion = null
     def directoriesToCheck = [
             "$HOME/.local/share/JetBrains/Toolbox/apps/WebStorm/"
     ]
