--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -41,13 +41,14 @@
         <b>2021.2</b>
         <ul>
         <li>If you're on StrykerJS 5.4.0 or newer you can use intentions to automatically exclude a surviving mutation with comments</li>
+        <li>Drop compatibility for Webstorm versions older than 2021.1</li>
         </ul>
         </p>
     ]]>
     </change-notes>
 
     <!-- please see http://www.jetbrains.org/intellij/sdk/docs/basics/getting_started/build_number_ranges.html for description -->
-    <idea-version since-build="193.5233.102"/>
+    <idea-version since-build="211"/>
 
     <!-- please see http://www.jetbrains.org/intellij/sdk/docs/basics/getting_started/plugin_compatibility.html
          on how to target different products -->
